# GA-Research

./: .gitignore  .gitmodules
3D Pose experiemtns/: ga-3d-pose-estimation.ipynb  image_to_pcd.ipynb  pyproject.toml
3D Pose experiemtns/src/: config.py  dataset.py  evaluation_metrics.py  image_encoders.py  img_to_pcd_2.py  img_to_pcd_stuff.py  main.py  model.py  train_utils.py  wandb_utils.py
GNN/: pyproject.toml
GNN/original/: main.py
GNN/src/: config.py  dataset.py  main.py  model.py  train_utils.py  wandb_utils.py
MNIST experiements/: mnist-exp.ipynb
RotMNIST/: pyproject.toml
RotMNIST/src/: config.py  dataset.py  main.py  model.py  train_utils.py  wandb_utils.py
pose_3d/: clifford-runner.ipynb  ga-3d-pose-estimation.ipynb  pyproject.toml
pose_3d/src/: cliffordnet_model.py  config.py  dataset.py  main_cliffordnet.py  main_i2s_baseline.py  train_utils.py
rot_2d/src/: config.py  dataset.py  main.py  model.py  train_utils.py
