[tool.poetry]
name = "gnn-cifar10-exps"
version = "0.1.0"
packages = [{ include = "src" }, { include = "original" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

torch = "2.9.0"
torchvision = "0.24.0"
tqdm = "4.67.1"
wandb = "0.23.1"
clifford = { git = "https://github.com/chagrygoris/clifford-group-equivariant-neural-networks.git" }
timm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
