[tool.poetry]
name = "3d-pose-estimation-exps"
version = "0.1.0"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"

torch = "2.9.0"
torchvision = "0.24.0"
tqdm = "4.67.1"
pandas = "2.2.2"
scikit-learn = "1.6.1"
matplotlib = "3.10.0"
seaborn = "0.13.2"
wandb = "0.23.1"
comet-ml = "3.54.2"
opencv-python = "4.12.0.88"
ipykernel = "^7.1.0"
nbformat = "^5.10.4"
scikit-image = "0.26.0"
image2sphere = { git = "https://github.com/chagrygoris/image2sphere.git" }
clifford = { git = "https://github.com/chagrygoris/clifford-group-equivariant-neural-networks.git" }
e3nn = "0.5.9"
healpy = "1.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
